Bug 512449 - [5.3, Android] The buttons on the floating Selection Actions Bar do not perform the correct action when pressing via touch
Summary: [5.3, Android] The buttons on the floating Selection Actions Bar do not perfo...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-21 21:57 UTC by Door1
Modified: 2025-12-08 09:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Door1 2025-11-21 21:57:03 UTC
SUMMARY
[5.3, Android] The buttons on the floating Selection Actions Bar do not perform the correct action when pressing via touch

STEPS TO REPRODUCE
1. Make a selection to show the floating Selection Actions Bar
2. Using your finger, touch any of the buttons

OBSERVED RESULT
Every single button does a deselect.

EXPECTED RESULT
The buttons should do their unique actions according to the icons shown.

You will also notice that the correct actions happen when pressing the buttons with a mouse. The problem occurs when pressing it with the finger on the screen. 

SOFTWARE/OS VERSIONS
Krita 5.3 nightly (git edefd69 / edefd699)
(November 19, 2025)
Android 15
arm64
Comment 1 Dmitry Kazakov 2025-12-08 09:41:02 UTC
Git commit 6f69fbe3d97b9a70bed21e46154432e410870702 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 08/12/2025 at 09:40.
Pushed by dkazakov into branch 'master'.

Make selection action bar act propertly on touch

By rewriting the event handling to not cast random other event types to
QMouseEvent and activating the buttons from the weird event filter. This
also makes the bar not draggable on its buttons.
Related: bug 512450

M  +151  -40   libs/ui/kis_selection_actions_panel.cpp
M  +10   -0    libs/ui/kis_selection_actions_panel.h

https://invent.kde.org/graphics/krita/-/commit/6f69fbe3d97b9a70bed21e46154432e410870702