Make selection action bar act propertly on touch

By rewriting the event handling to not cast random other event types to
QMouseEvent and activating the buttons from the weird event filter. This
also makes the bar not draggable on its buttons.

BUG:512449

BUG:512450